Fixed POST request to create region
