# src/main/java/com/github/helena128/regionmanager/api/RegionsApiImpl.java
@@ -2,7 +2,6 @@ package com.github.helena128.regionmanager.api;
 
 import com.github.helena128.regionmanager.service.RegionsService;
 import io.swagger.api.RegionsApi;
-import io.swagger.model.OperationResultWithRegionList;
 import io.swagger.model.Region;
 import io.swagger.model.RegionInput;
 import lombok.AccessLevel;
@@ -11,6 +10,7 @@ import lombok.experimental.FieldDefaults;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.RequestBody;
 
 @Controller
 @RequiredArgsConstructor
@@ -20,27 +20,7 @@ public class RegionsApiImpl implements RegionsApi {
     RegionsService regionsService;
 
     @Override
-    public ResponseEntity<Region> addRegion(RegionInput regionInput) {
+    public ResponseEntity<Region> addRegion(@RequestBody RegionInput regionInput) {
         return new ResponseEntity<>(regionsService.addRegion(regionInput), HttpStatus.CREATED);
-    }
-
-    @Override
-    public ResponseEntity<Region> getRegionById(String id) {
-        return null;
-    }
-
-    @Override
-    public ResponseEntity<OperationResultWithRegionList> getRegions() {
-        return null;
-    }
-
-    @Override
-    public ResponseEntity<Void> removeRegion(String id) {
-        return null;
-    }
-
-    @Override
-    public ResponseEntity<Region> updateRegion(String id, RegionInput regionInput) {
-        return null;
     }
 }
